k8s/aat/cluster-01/admin/k8s-env-injector-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: env-injector-webhook-svc
  labels:
    app: env-injector
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: env-injector
