k8s/aat/cluster-01/admin/k8s-env-injector-mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: env-injector-webhook-cfg
  namespace: admin
  labels:
    app: env-injector
webhooks:
  - name: env-injector.hmcts.net
    clientConfig:
      service:
        name: env-injector-webhook-svc
        namespace: admin
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUV4ekNDQXErZ0F3SUJBZ0lRRVpwUUZUdXYvVGhZWWtMVVR4QmdYekFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TURBeE1EY3lNVEEyTWpOYUZ3MDBPVEV5TXpBeU1URTJNak5hTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FnOEFNSUlDQ2dLQ0FnRUFtdkh5Cld2ZTRoWjJDZDhlb3RCRzRLMWIyNmhUQzVCTmdYVEJWdWViVkJ2WUZsdWxjK2cySDlyVmljK3ZvNUcxWG9GTXgKUFRoRjJSd29GVU9ET3V3TDJDMndsajhLdjJtZlZNYWlpYkNGa1EvNTAyMXpqUzFwUFdDaFNvUWs1MEZ4QWVLVwo5YlpHQTVRR2RM [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        hmcts.github.com/envInjector: enabled
